<?xml version="1.0"?>
<package format="2">
  <name>myrobot</name>
  <version>0.0.1</version>
  <description>The myrobot package</description>
  <license>Apache License 2.0</license>
  <author email="bert@berrevoets.net">B.N.Berrevoets</author>
  <maintainer email="bert@berrevoets.net">B.N.Berrevoets</maintainer>
  <url type="bugtracker">https://github.com/bberrevoets/myrobot/issues</url>
  <url type="repository">https://github.com/bberrevoets/myrobot</url>
  <url type="website">https://github.com/bberrevoets/myrobot/wiki</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>raspi_temperature</build_depend>
  <build_depend>turtlebot3_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>diagnostic_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>raspi_temperature</build_export_depend>
  <build_export_depend>turtlebot3_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend> 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>raspi_temperature</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>
  <export>
  </export>
<build_depend>tf</build_depend>
<build_export_depend>tf</build_export_depend>
<exec_depend>tf</exec_depend>
</package>